[gd_scene load_steps=5 format=3 uid="uid://dacmxxndhic6b"]

[ext_resource type="Texture2D" uid="uid://diw83q4bmsulp" path="res://assets/tankBody.png" id="1_alfbm"]
[ext_resource type="Script" path="res://scripts/enemy_tank.gd" id="1_bl4ox"]
[ext_resource type="Texture2D" uid="uid://cu6dqvkjbphha" path="res://assets/tankGun.png" id="2_ckxeu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5vn6"]
size = Vector2(61, 45)

[node name="enemy" type="CharacterBody2D"]
modulate = Color(1, 0, 0, 1)
collision_layer = 2
script = ExtResource("1_bl4ox")

[node name="tankBody" type="Sprite2D" parent="."]
scale = Vector2(0.71, 0.7)
texture = ExtResource("1_alfbm")

[node name="tankGun" type="Sprite2D" parent="."]
rotation = -1.5708
scale = Vector2(0.815, 0.833)
texture = ExtResource("2_ckxeu")
offset = Vector2(0, 16.534)

[node name="fire_loc" type="Node2D" parent="tankGun"]
position = Vector2(-0.000195479, 54.326)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_y5vn6")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="nav_agent" type="NavigationAgent2D" parent="."]

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
